<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_relocation" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_estimate" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_proposal" />

    <item
        android:id="@+id/navigation_list_relocation"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_proposal_list" />

    <item
        android:id="@+id/navigation_list_travel"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_relocation_list" />

</menu>
