<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/serverBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/serverBase" />

    <Button
        android:id="@+id/server_base_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_base_server"/>

    <EditText
        android:id="@+id/serverEstimation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/serverEstimation" />

    <Button
        android:id="@+id/server_estimation_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_estimation_server"/>

</LinearLayout>